# tf_cpp_inference

./: CMakeLists.txt  README.md  main.cpp  muffler_2.ply  run_inference.sh  smoothnet_tf.cpp
core/: core.cpp  core.h
data/demo/32_dim/: cloud_bin_0.ply_0.150000_16_1.750000_3DSmoothNet.npz  cloud_bin_0.ply_0.150000_16_1.750000_3DSmoothNet.txt  cloud_bin_1.ply_0.150000_16_1.750000_3DSmoothNet.npz  cloud_bin_1.ply_0.150000_16_1.750000_3DSmoothNet.txt
frozen_graph/: encrypt_decrypt.py
pointcloud_data/: tacked_prat_noise.ply
tensor_net/: tensor_net.cpp  tensor_net.h  tensor_net.hpp
tensorflow_cc/: install_pcl.sh  install_tf_cc.sh
